    - checkindexes(): check if an object is a vector of valid data frame or
      matrix indexes; otherwise, an error is raised and an information message
      is displayed.
  - Regrouped internal 'is.xxx' helper functions into one file, TraMineR-is_helpers.R.
  - Generalized msg.warn() / msg.warn0() and msg() / msg0() code.


## =========
Version 2.0-5 [2017-05-13] (Stable version)

Note:
  - This is a major update of the CRAN version of TraMineR.
  - Check also changes in versions 1.9-14, 2.0-0, 2.0-1, 2.0-2, 2.0-3,
    and 2.0-4 that have not been released on the CRAN.

Bug fixes:
  - seqtrate(): now accepts a sequence object ('seqdata') containing only one sequence.
  - seqdist(): now accepts a reference sequence object ('refseq') containing
    missing values while the main sequence object ('seqdata') doesn't.

Misc:
  - Replaced default deprecated values of 'norm' in
    seqdistmc() and seqtree().
  - Fixed issues with examples in documentation page of
    seqtree().


## =========
Version 2.0-4 [2017-04-13] (Unreleased version)

Changes in existing functions:
  - Renamed several argument names to increase consistency within TraMineR and
    between TraMineR and R. The aim is also to have a common naming
    convention within TraMineR.
    A new internal function - checkargs() - is used to guarantee backward
    compatibility. If the old argument name is used instead of the new one,
    a warning message with an explanation is displayed and the execution
    continues. If the new and old argument names are used together, an error
    message is displayed and the execution stops.
    The following functions have at least one renamed argument: dissrep(),
    disstree(), disstree2dot(), disstree2dotp(), disstreedisplay(), is.eseq(),
    is.seqelist(), seqdiff(), seqeconstraint(), seqecontain(), seqecreate(),
    seqefsub(), seqeid(), seqelength(), seqelength<-, seqetm(), seqeweight(),
    seqeweight<-, seqlegend(), seqpcplot(), seqplot(), seqrep(), seqtab(),