@@ -1,6 +1,6 @@
 Package: TraMineR
 Version: 2.1-6
-Date: 2017-05-29
+Date: 2017-05-30
 Title: Trajectory Miner: a Toolbox for Exploring and Rendering Sequences
 Authors@R: c(
   person("Alexis", "Gabadinho", role = c("aut", "cph")),
