@@ -7,75 +7,75 @@ importFrom("Hmisc", "errbar")
 importFrom("cluster", "daisy")
 
 export(
-    alphabet,
-    "alphabet<-",
-    cpal,
-    "cpal<-",
-    read.tda.mdist,
-    recodef,
-    seqalign,
-    seqcomp,
-    seqconc,
-    seqcost,
-    seqdecomp,
-    seqdef,
-    seqdiff,
-    seqdim,
-    seqdist,
-    seqdistmc,
-    seqdplot,
-    seqdss,
-    seqdur,
-    seqfcheck,
-    seqfind,
-    seqformat,
-    seqfplot,
-    seqfpos,
-    seqgen,
-    seqHtplot,
-    seqici,
-    seqient,
-    seqiplot,
-    seqIplot,
-    seqistatd,
-    seqlegend,
-    seqlength,
-    seqLLCP,
-    seqLLCS,
-    seqlogp,
-    seqmeant,
-    seqmodst,
-    seqmpos,
-    seqmsplot,
-    seqmtplot,
-    seqnum,
-    seqpcfilter,
-    seqpcplot,
-    seqplot,
-    seqpm,
-    seqrecode,
-    seqrep,
-    seqrplot,
-    seqsep,
-    seqstatd,
-    seqstatf,
-    seqstatl,
-    seqST,
-    seqsubm,
-    seqsubsn,
-    seqtab,
-    seqtransn,
-    seqtrate,
-    stlab,
-    "stlab<-",
-    TraMineR.checkupdates,
-    TraMineRInternalNodeInit,
-    TraMineRInternalSplitInit,
-    TraMineRInternalLayout,
-    TraMineRInternalLegend,
-    TraMineRInternalSeqeage,
-    TraMineRInternalSeqgbar
-  )
+  alphabet,
+  "alphabet<-",
+  cpal,
+  "cpal<-",
+  read.tda.mdist,
+  recodef,
+  seqalign,
+  seqcomp,
+  seqconc,
+  seqcost,
+  seqdecomp,
+  seqdef,
+  seqdiff,
+  seqdim,
+  seqdist,
+  seqdistmc,
+  seqdplot,
+  seqdss,
+  seqdur,
+  seqfcheck,
+  seqfind,
+  seqformat,
+  seqfplot,
+  seqfpos,
+  seqgen,
+  seqHtplot,
+  seqici,
+  seqient,
+  seqiplot,
+  seqIplot,
+  seqistatd,
+  seqlegend,
+  seqlength,
+  seqLLCP,
+  seqLLCS,
+  seqlogp,
+  seqmeant,
+  seqmodst,
+  seqmpos,
+  seqmsplot,
+  seqmtplot,
+  seqnum,
+  seqpcfilter,
+  seqpcplot,
+  seqplot,
+  seqpm,
+  seqrecode,
+  seqrep,
+  seqrplot,
+  seqsep,
+  seqstatd,
+  seqstatf,
+  seqstatl,
+  seqST,
+  seqsubm,
+  seqsubsn,
+  seqtab,
+  seqtransn,
+  seqtrate,
+  stlab,
+  "stlab<-",
+  TraMineR.checkupdates,
+  TraMineRInternalLayout,
+  TraMineRInternalLegend,
+  TraMineRInternalNodeInit,
+  TraMineRInternalSeqeage,
+  TraMineRInternalSeqgbar,
+  TraMineRInternalSplitInit,
+  TraMineRInternalWeightedInertiaDist)
 
 ## stslist methods
 S3method(summary, stslist)
