@@ -1,6 +1,6 @@
 Package: WeightedCluster
 Version: 1.3-1
-Date: 2017-05-15
+Date: 2017-05-30
 Title: Clustering of Weighted Data
 Authors@R:person("Matthias", "Studer", email = "matthias.studer@unige.ch", role = c("aut", "cre"))
 Depends: R (>= 3.0.0), TraMineR (>= 1.8-14), cluster
